<resources>
    <string name="app_name">Amna</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="earnings">Earnings</string>
    <string name="profile">Profile</string>
    <string name="ok">Ok</string>

    <string name="share_link" translatable="false">https://play.google.com/store/apps/details?id=</string>

    <string name="cancel">Cancel</string>
    <string name="login_note_message">Please login first</string>
    <string name="welcome_to_the_application">Welcome to Amna Application</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="forget_password">forget password?</string>
    <string name="dont_have_account">don\'t have account?<font color="#41AD4A"> register now</font></string>
    <string name="create_new_account">Create new account</string>
    <string name="complete_your_data">Complete this informations to create new account</string>
    <string name="personal_name">Personal name</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account?<font color="#41AD4A"> Login</font></string>
    <string name="choose_language">Please choose language</string>
    <string name="ar" translatable="false">ع</string>
    <string name="arabic_lang">اللغة العربية</string>
    <string name="en">E</string>
    <string name="english_lang">English</string>
    <string name="continue_txt">Continue</string>
    <string name="choose_account_type">Please choose account type</string>
    <string name="home_account">Home Account</string>
    <string name="replace_for_gifts">Replace your remnants for poins or gifts</string>
    <string name="work_account">Work Account</string>
    <string name="replace_for_money">Replace your remnants for money</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="contact_us">Contact Us</string>
    <string name="volunteering">Volunteering</string>
    <string name="language">Language</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">User Name</string>
    <string name="notes">Notes</string>
    <string name="send">Send</string>
    <string name="call">Call Us</string>
    <string name="my_personal_data">My personal data</string>
    <string name="save_changes">Save Changes</string>
    <string name="forget_password_title">Forget Password</string>
    <string name="enter_registered_phone_number">Please, enter the phone number registered with us to receive the activation code</string>
    <string name="address">Address</string>
    <string name="title_1">Don\'t know where to put your electronic waste?</string>
    <string name="description_1">There is a long-established fact that the readable content of a page will not distract the reader</string>
    <string name="title_2">We will help you put it together</string>
    <string name="description_2">There is a long-established fact that the readable content of a page will not distract the reader</string>
    <string name="title_3">Hand it over and win coupons and many more products</string>
    <string name="description_3">There is a long-established fact that the readable content of a page will not distract the reader</string>
    <string name="enter_your_new_password">Please enter Your new password to complete the process</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="please_enter_valid_code">Please enter valid code</string>
    <string name="the_time_is_not_over_yet">The time is not over yet</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_page_info">The code has sent to the number</string>
    <string name="resend">Does n\'t receive Code?<font color="#41AD4A"> Resend</font></string>
    <string name="confirm">Confirm</string>
    <string name="enable_gps">Enable either GPS or any other location service to find current location. Click OK to go to location services settings to let you do so.</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_your_password">Create a new password and try to use symbols and numbers to strengthen the password and stay away from old passwords</string>
    <string name="old_password">Old Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="watch">Watch</string>
    <string name="register_for_the_course">Register in course</string>
    <string name="categories">Categories</string>
    <string name="purchase_vouchers">Purchase vouchers</string>
    <string name="products">Products</string>
    <string name="my_orders">My Orders</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="finished">Finished</string>
    <string name="rejected">Rejected</string>
    <string name="last_orders">Last Orders</string>
    <string name="accept_order">Accept Oreder</string>
    <string name="coupon">Coupon</string>
    <string name="order_delivery">Order Delivery</string>
    <string name="past_orders">Past Orders</string>
    <string name="notifications">Notifications</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="addresses">Addresses</string>
    <string name="new_address">New Address</string>
    <string name="points_worth">points</string>
    <string name="currency">E.G</string>
    <string name="there_are_no_addresses_for_you">There are no addresses for you</string>

    <string name="product_points" translatable="false">%s %s</string>

    <string name="the_email_can_not_be_blank">The email can\'t be blank</string>
    <string name="the_password_can_not_be_blank">The password can\'t be blank</string>
    <string name="the_phone_can_not_be_blank">The phone can\'t be blank</string>
    <string name="the_repeat_password_can_not_be_blank">The repeat password can\'t be blank</string>
    <string name="password_is_not_match">The Password is not match</string>
    <string name="that_is_not_a_valid_email">That\'s not a valid email</string>
    <string name="that_is_not_a_valid_phone">That\'s not a valid phone</string>
    <string name="user_name_is_empty_error_message">The username can\'t be blank</string>
    <string name="message_is_empty_error_message">The message can\'t be blank</string>
    <string name="field_is_empty_error_message">Field can\'t be blank</string>
    <string name="phone_must_be_11_number">phone must be 11 numbers</string>
    <string name="password_must_atleast_6_character">password must at least 6 character</string>
    <string name="password_can_not_be_empty">كلمة السر لايمكن ان تكون فارغة</string>
    <string name="area">Governorate</string>
    <string name="city">City</string>
    <string name="save_to_addresses">Save Address</string>
    <string name="search">Search</string>
    <string name="add_Product">Add Product</string>
    <string name="cart">Cart</string>
    <string name="get_it_now">Get It Now</string>
    <string name="voucher">Voucher</string>
    <string name="order_summary">Order Summary</string>
    <string name="items_count">Items Count</string>
    <string name="totla_points">Totla Points</string>
    <string name="voucher_percentage">Voucher Percentage</string>
    <string name="gift_type">Gift Type</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallary</string>
    <string name="image_attched">Photo Attached</string>
    <string name="permission_error">Permission Refused</string>
    <string name="brand">Brand</string>
    <string name="product_status">Product Status</string>
    <string name="product_desc">Product Description</string>
    <string name="save_and_add"><![CDATA[Save & Add]]></string>
    <string name="product_added_to_cart">Product Added To Cart Successfully</string>
    <string name="new_product">New Product</string>
    <string name="please_add_one_image_at_least">Please add one image at least</string>
    <string name="please_select_product_status">Please select product status</string>
    <string name="please_select_product_brand">Please select product brand</string>
    <string name="my_points">My Points</string>
    <string name="current_balance">Current Balance</string>
    <string name="last_processes">Last Processes</string>
    <string name="wallet">Wallet</string>
    <string name="bank">Bank</string>
    <string name="exchange_my_points">Exchange My Points</string>
    <string name="bank_account">Bank Account</string>
    <string name="electronic_wallet">E-Wallet</string>
    <string name="bank_name">Bank Name</string>
    <string name="Account_number">Bank Account Number</string>
    <string name="account_owner">Account Owner Name</string>
    <string name="exchange">Exchange</string>
    <string name="bank_card">Bank Card</string>
    <string name="card_number">Bank Card Number</string>
    <string name="_new">New</string>
    <string name="_old">Old</string>

    <string name="register_course_note">Please leave your information required to register with us and we will contact you as soon as possible</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>