<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.auth.language.LanguageFragment">

    <ImageView
        android:id="@+id/backIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/hello_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/welcome_to_the_application"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo" />

    <TextView
        android:id="@+id/app_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/choose_language"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:fontFamily="@font/cairo_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/arLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:translationZ="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/app_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/bg_selected_lang_type">

        <TextView
            android:id="@+id/ar_tv"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="wrap_content"
            android:text="@string/ar"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:fontFamily="@font/cairo_bold"
            android:background="@drawable/bg_selected_category"
            android:padding="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ar_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/arabic_lang"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:fontFamily="@font/cairo_bold"
            app:layout_constraintTop_toTopOf="@id/ar_tv"
            app:layout_constraintBottom_toBottomOf="@id/ar_tv"
            app:layout_constraintStart_toEndOf="@id/ar_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/enLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:translationZ="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/arLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/bg_white">

        <TextView
            android:id="@+id/en_tv"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:fontFamily="@font/cairo_bold"
            android:background="@drawable/bg_unselected_category"
            android:padding="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/en_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/english_lang"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:fontFamily="@font/cairo_bold"
            app:layout_constraintTop_toTopOf="@id/en_tv"
            app:layout_constraintBottom_toBottomOf="@id/en_tv"
            app:layout_constraintStart_toEndOf="@id/en_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_primery_btn"
        android:text="@string/continue_txt"
        android:textSize="@dimen/_12ssp"
        android:textAllCaps="false"
        android:padding="@dimen/_6sdp"
        app:backgroundTint="@color/mainGreen"
        app:fontFamily="@font/cairo_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>