<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.auth.forget_password.ForgetPasswordFragment">

    <ImageView
        android:id="@+id/backIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_semi_bold"
        android:text="@string/forget_password_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backIv" />

    <TextView
        android:id="@+id/tvTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/enter_registered_phone_number"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_12ssp"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_et_8_corner_stroke"
        android:elevation="@dimen/_1sdp"
        android:translationZ="@dimen/_8sdp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:hint="@string/phone_number"
            android:fontFamily="@font/cairo_regular"
            android:background="@android:color/transparent"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="@dimen/_14sdp"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:padding="@dimen/_6sdp"
        android:background="@drawable/bg_primery_btn"
        android:text="@string/send"
        android:textSize="@dimen/_12ssp"
        android:textAllCaps="false"
        app:backgroundTint="@color/mainGreen"
        app:fontFamily="@font/cairo_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_til" />

</androidx.constraintlayout.widget.ConstraintLayout>