<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.my_account.exchange_points.ExchangePointsFragment">

    <ImageView
        android:id="@+id/backIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/exchange_my_points"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backIv" />

    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/my_points"
        android:textColor="@color/black"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvPointsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/points_worth"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvPoints"
        app:layout_constraintStart_toEndOf="@id/tvPoints" />

    <TextView
        android:id="@+id/tvPointsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/cairo_regular"
        android:text="1500"
        android:layout_marginStart="@dimen/_16sdp"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@id/tvPointsValue"
        app:layout_constraintStart_toStartOf="@id/tvPoints"
        app:layout_constraintTop_toBottomOf="@id/tvPoints" />

    <TextView
        android:id="@+id/tvPointsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_regular"
        android:text="="
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@id/tvCurrentValue"
        app:layout_constraintBottom_toBottomOf="@id/tvPointsText"
        app:layout_constraintStart_toEndOf="@id/tvPointsText"
        app:layout_constraintTop_toTopOf="@id/tvPointsText" />

    <TextView
        android:id="@+id/tvCurrentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_regular"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="290 EG"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@id/tvPoints"
        app:layout_constraintBottom_toBottomOf="@id/tvPointsText"
        app:layout_constraintStart_toEndOf="@id/tvPointsValue"
        app:layout_constraintTop_toTopOf="@id/tvPointsText" />

    <LinearLayout
        android:id="@+id/llLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_light_gray"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentValue">

    <TextView
        android:id="@+id/tvBankAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:layout_weight="1"
        android:padding="@dimen/_4sdp"
        android:background="@drawable/bg_white"
        android:fontFamily="@font/cairo_regular"
        android:gravity="center"
        android:text="@string/bank_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvPoints"
        app:layout_constraintTop_toBottomOf="@id/tvPoints" />

    <TextView
        android:id="@+id/tvWallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_weight="1"
        android:fontFamily="@font/cairo_regular"
        android:gravity="center"
        android:padding="@dimen/_4sdp"
        android:text="@string/electronic_wallet"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvPoints"
        app:layout_constraintTop_toBottomOf="@id/tvPoints" />

    <TextView
        android:id="@+id/tvBankCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_weight="1"
        android:fontFamily="@font/cairo_regular"
        android:gravity="center"
        android:padding="@dimen/_4sdp"
        android:text="@string/bank_card"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvPoints"
        app:layout_constraintTop_toBottomOf="@id/tvPoints" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvBankTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/bank_name"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etBank"
        style="@style/TextInputLayoutStyleSpinnerNoBoarder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="@drawable/bg_white"
        android:cursorVisible="true"
        android:focusable="false"
        android:hint="@string/bank_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBankTitle">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/bank_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvAccountNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/Account_number"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBank" />

    <EditText
        android:id="@+id/etAccountNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_et_8_corner_stroke"
        android:fontFamily="@font/cairo_regular"
        android:inputType="number"
        android:maxLines="1"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvAccountNumberTitle"
        app:layout_constraintTop_toBottomOf="@id/tvAccountNumberTitle" />

    <TextView
        android:id="@+id/tvAccountOwnerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/account_owner"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAccountNumber" />

    <EditText
        android:id="@+id/etAccountOwner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_et_8_corner_stroke"
        android:fontFamily="@font/cairo_regular"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvAccountOwnerTitle"
        app:layout_constraintTop_toBottomOf="@id/tvAccountOwnerTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:background="@drawable/bg_primery_btn"
        android:text="@string/exchange"
        android:textSize="@dimen/_12ssp"
        android:textAllCaps="false"
        app:backgroundTint="@color/mainGreen"
        app:fontFamily="@font/cairo_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAccountOwner" />

</androidx.constraintlayout.widget.ConstraintLayout>